<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="361dp"
            android:layout_height="170dp"
            android:contentDescription="@string/tjoptjop_logo"
            android:src="@mipmap/tjoptjop_logo_white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_customerCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"

            android:background="@color/white"

            android:ems="10"
            android:hint="@string/customerCode"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText_activation_token"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"

            android:background="@color/white"

            android:ems="10"
            android:hint="@string/activation_token"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/section3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/nwu_logo"
            android:src="@mipmap/nwu_logo_white" />

    </LinearLayout>

</LinearLayout>