<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IdentificationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/identification_text"
            android:src="@mipmap/id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identification_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imgTypeID"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/qr_sample"
            android:src="@mipmap/qr_sample" />

        <TextView
            android:id="@+id/userDetails_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/section3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView_cancel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="32dp"
            android:src="@mipmap/cross"
            android:contentDescription="@string/no" />

        <ImageView
            android:id="@+id/imageView_confirm"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:src="@mipmap/checkmark"
            android:contentDescription="@string/yes" />


    </LinearLayout>

</LinearLayout>