<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/identification_type_ttpass"
            android:src="@mipmap/ttpass"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identification_type_ttpass"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:tint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/temperature_capturing_text"
            android:src="@mipmap/manual_data"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/identification_type_manual"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>