<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MaskActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@mipmap/mask"
            android:contentDescription="@string/mask_verification_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/mask_verification_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center" >

        <Button
            android:id="@+id/wearing_mask_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/the_person_is_wearing_a_mask" />

        <Button
            android:id="@+id/issue_mask_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/i_have_issued_the_person_with_a_mask"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </LinearLayout>

</LinearLayout>