<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="102dp">

            <ImageView
                android:id="@+id/outputImage"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/temperature_capturing_text"
                android:src="@mipmap/temperature" />

            <EditText
                android:id="@+id/confirm_temp_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:fontFamily="sans-serif-medium"
                android:gravity="center|clip_vertical|center_horizontal"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:visibility="visible" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/temperature_capturing_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/black">

        <com.quintonvr.tjoptjop.machinevision.ScreenReaderCamera
            android:id="@+id/camera_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/section3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/position_temperature_value_within_frame"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_photo_camera_white_24px"
            android:visibility="visible"
            app:fabSize="normal" />

        <LinearLayout
            android:id="@+id/confirm_cancel_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/no"
                android:src="@mipmap/cross" />

            <ImageView
                android:id="@+id/imageView_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/yes"
                android:src="@mipmap/checkmark" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>